--- a/app/styles/index.sass
+++ b/app/styles/index.sass
@@ -1,2 +1,23 @@
-h1
-  color: red
+.content
+  max-width: 1425px
+
+  .card
+    box-sizing: border-box
+    float: left
+    padding: 5px
+    width: 33.33%
+
+    @media (max-width: 900px)
+      width: 50%
+
+    @media (max-width: 500px)
+      width: 100%
+
+    img
+      height: 400px
+      width: 100%
+
+    .card-header
+      font-family: cursive
+      font-weight: 600
+      text-align: center
